added dependencies to bower.json

--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "handlebars": "^4.0.5",
+    "jQuery": "^3.1.1"
+  }
 }
